# portfolio-cockpit

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  app.py  pyproject.toml  requirements.txt
.claude/commands/: finish.md  git.md  start.md
.streamlit/: secrets.toml.example
analytics/: performance.py  portfolio.py  risk.py  simulator.py
data/: chat_prompts.py  db.py  global_markets.py  llm.py  macro_data.py  market_data.py  seed.py  web_search.py  yield_curve.py
docs/decisions/: 001-streamlit-over-react.md
docs/learnings/: armadilhas.md  o-que-funciona.md
docs/specs/: PRD.md
knowledge_base/deepdives/: ALOS3.md  ASML.md  BRAV3.md  ENGI4.md  EQTL3.md  GMAT3.md  GOOGL.md  INBR32.md  KLBN4.md  MELI.md  MGLU3.md  MU.md  NVDA.md  PLPL3.md  RAPT4.md  SNPS.md  TSM.md  UGPA3.md
knowledge_base/frameworks/: framework_analise.md  portfolio_mapeamento.md
knowledge_base/reports/: oil_analysis.md  relatorio_macro_rotacao.md  relatorio_safra_2025_26.md  tese_suzb3_atualizada.md
pages/: 1_overview.py  2_positions.py  3_risk_macro.py  4_chat.py  4_thesis_board.py  5_knowledge_base.py  6_simulator.py  7_markets.py
supabase/: config.toml
tests/: conftest.py  test_chat_prompts.py  test_currency.py  test_db.py  test_formatting.py  test_global_markets.py  test_llm.py  test_macro_data.py  test_market_data.py  test_markets.py  test_performance.py  test_portfolio_extended.py  test_risk.py  test_seed_extraction.py  test_simulator.py  test_web_search.py  test_yield_curve.py
utils/: auth.py  cache_info.py  constants.py  currency.py  formatting.py
(+1 files in other folders)
