[project]
name = "portfolio-cockpit"
version = "0.1.0"
description = "Dashboard de monitoramento de portfólio de investimentos"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "supabase>=2.0.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.31",
    "requests>=2.31.0",
    "quantstats>=0.0.62",
    "PyPortfolioOpt>=1.5.5",
    "python-bcb>=0.2.0",
    "streamlit-option-menu>=0.3.6",
    "openai>=1.30.0",
    "pyettj>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
